[package]
name = "kobold-cli"
version = "0.10.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2021"
license = "MPL-2.0"
readme = "../../README.md"
keywords = ["web", "wasm", "javascript"]
categories = ["wasm", "web-programming"]
description = "CLI tools for the Kobold framework"
repository = "https://github.com/maciejhirsz/kobold"
documentation = "https://docs.rs/kobold"
default-run = "kobold"

[[bin]]
name = "kobold"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = { version = "0.28.1", default-features = false }
futures-lite = "2.5.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
leb128 = "0.2.5"
lol_html = "2.0.0"
notify = "7.0.0"
oxc = { version = "0.35.0", features = ["minifier", "semantic", "codegen", "transformer"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["net", "rt", "sync"] }
tower-async = { version = "0.2", features = ["util"] }
tower-async-http = { version = "0.2", features = ["compression-gzip", "fs"] }
wasmparser = "0.206.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
