[package]
name = "kobold_qrcode_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
kobold = { path = "../../crates/kobold", features = ["rlsf"] }
kobold_qr = { path = "../../crates/kobold_qr" }

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlInputElement",
]
